--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="./style/navigationBar.css" />
     <link rel="stylesheet" href="./style/main.css" />
+    <link rel="stylesheet" href="./style/sections.css" />
 
     <script
       src="https://kit.fontawesome.com/992def5dc8.js"
@@ -18,16 +19,39 @@
   <body>
     <div class="navigationBar">
       <button class="navigationBar__button js-minimizeButton">
-        <i class="fa-solid fa-minus"></i>
+        <i class="fa-solid fa-minus navigationBar__icons"></i>
       </button>
 
       <button class="navigationBar__button js-maximizeButton">
-        <i class="fa-regular fa-window-maximize"></i>
+        <i class="fa-regular fa-window-maximize navigationBar__icons"></i>
       </button>
 
       <button class="navigationBar__button js-exitButton">
-        <i class="fa-solid fa-xmark"></i>
+        <i class="fa-solid fa-xmark navigationBar__icons"></i>
       </button>
+    </div>
+
+    <div class="mainContainer">
+      <div class="sections">
+        <div class="section_container">
+          <button class="sections_button">
+            <i class="fa-solid sections__buttonIcon fa-bolt"></i
+            ><span class="sections__buttonText">Lighthouse</span>
+          </button>
+          <button class="sections_button">
+            <i class="fa-solid sections__buttonIcon fa-fire"></i
+            ><span class="sections__buttonText">Fire</span>
+          </button>
+          <button class="sections_button">
+            <i class="fa-solid sections__buttonIcon fa-spider"></i
+            ><span class="sections__buttonText">Spider</span>
+          </button>
+          <button class="sections_button">
+            <i class="fa-solid sections__buttonIcon fa-gear"></i
+            ><span class="sections__buttonText">Settings</span>
+          </button>
+        </div>
+      </div>
     </div>
   </body>
 </html>
